--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bower": "^1.7.9"
+    "bower": "^1.7.9",
+    "gulp": "^3.9.1"
+  },
+  "devDependencies": {
+    "gulp-connect": "^5.0.0",
+    "gulp-connect-multi": "^1.0.8",
+    "gulp-watch": "^4.3.9"
   }
 }
